# Patrik

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  example.env
.github/workflows/: rust.yml
src/: events.rs  lib.rs  main.rs
src/commands/: general.rs  mod.rs  owner.rs
