[package]
name = "patrik"
version = "0.1.0"
authors = ["João Coutinho <jafonsocoutinho@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = "0.9.3"
tokio = { version = "0.2", features = ["macros"] }
log = "0.4.0"
env_logger = "0.8.2"
rand = "0.8.1"
